@@ -18,6 +18,7 @@ Acknowledgements:
 Problems corrected:
     1. Under JDK 1.3, error headers would sometimes cause a FileNotFoundException
     2. Cookies containing '=' or wrapped in quotes are now recognized
+    3. The JavaDoc now correctly shows the public methods in TableCell used for handling nested tables.
 
 Additions:
     1. The Referer header is now sent for requests derived from links and forms.
